<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_filter"
        android:title="item 1"
        android:id="@+id/filter"
        app:showAsAction="ifRoom" />


</menu>